Renamed style.css to normalize.css
It was disregarding everything in the "actual" css file. It is now called normalize.css and only linked for local testing files.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -485,25 +485,25 @@ th {
 }
 
 .highlight .nv {
-	color: #008080
+	color: #008080;
 }
 
 .highlight .ow {
 	color: #000000;
-	font-weight: bold
+	font-weight: bold;
 }
 
 .highlight .o {
 	color: #000000;
-	font-weight: bold
+	font-weight: bold;
 }
 
 .highlight .w {
-	color: #bbbbbb
+	color: #bbbbbb;
 }
 
 .highlight {
-	background-color: #f8f8f8
+	background-color: #f8f8f8;
 }
 
 * {
