--- a/css/additions.css
+++ b/css/additions.css
@@ -1,3 +1,27 @@
-.discount {
-	
+#snowflakes-photo a {
+	background-color: black; 
+	color: white; 
+	text-decoration: none; 
+	padding: 4px 6px; 
+	font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif; 
+	font-size: 12px; 
+	font-weight: bold; 
+	line-height: 1.2; 
+	display: inline-block; 
+	border-radius: 3px;
 }
+
+#snowflakes-photo a span {
+	display: inline-block; 
+	padding: 2px 3px;
+}
+
+#snowflakes-photo a span svg {
+	height: 12px; 
+	width: auto; 
+	position: relative; 
+	vertical-align: middle; 
+	top: -2px; 
+	fill: white;
+}
+
