--- a/css/additions.css
+++ b/css/additions.css
@@ -1,27 +1,46 @@
 #snowflakes-photo a {
-	background-color: black; 
-	color: white; 
-	text-decoration: none; 
-	padding: 4px 6px; 
-	font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif; 
-	font-size: 12px; 
-	font-weight: bold; 
-	line-height: 1.2; 
-	display: inline-block; 
-	border-radius: 3px;
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  padding: 4px 6px;
+  font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1.2;
+  display: inline-block;
+  border-radius: 3px;
 }
 
 #snowflakes-photo a span {
-	display: inline-block; 
-	padding: 2px 3px;
+  display: inline-block;
+  padding: 2px 3px;
 }
 
 #snowflakes-photo a span svg {
-	height: 12px; 
-	width: auto; 
-	position: relative; 
-	vertical-align: middle; 
-	top: -2px; 
-	fill: white;
+  height: 12px;
+  width: auto;
+  position: relative;
+  vertical-align: middle;
+  top: -2px;
+  fill: white;
+}
+
+.wrap {
+  width: 1060px;
+  height: auto;
+  margin: auto;
+  text-align: center;
+  position: relative;
+}
+
+.text_over_image {
+  position: absolute;
+  margin: auto;
+  top: 50%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  color: #fff;
+  font-size: 20px;
 }
 
