--- a/css/additions.css
+++ b/css/additions.css
@@ -26,7 +26,7 @@
 }
 
 .wrap {
-  width: 1060px;
+  width: 50vw;
   height: auto;
   margin: auto;
   text-align: center;
@@ -42,5 +42,15 @@
   bottom: 0;
   color: #fff;
   font-size: 20px;
+}
+
+#snowflakes-photo {
+  display: block;
+}
+
+@media only screen and (max-width: 600px) {
+  object, #snowflakes-photo {
+    display: none;
+  }
 }
 
