--- a/css/additions.css
+++ b/css/additions.css
@@ -58,3 +58,17 @@
   }
 }
 
+div#forms {
+  border-color: rgba(27, 63, 68, 0.2); 
+  border-width: 1px; 
+  border-style: inset; 
+  padding: 2%; 
+  margin: 2%;
+}
+
+div#forms + div.highlight {
+  height: 50vh; 
+  overflow: auto;
+}
+
+
